# LibSys

./: CMakeLists.txt  Makefile  README.md  library.db  users.db  version.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: codeql.yml  greetings.yml
Arduino/: rfid_code.cpp
Backupper/: backupper.bat
LibSysInstaller/: CMakeLists.txt  Makefile
LibSysInstaller/icons/: LibSysInstaller.rc  resources.qrc
LibSysInstaller/src/: InstallerWindow.cpp  main.cpp
LibSysInstaller/src/headers/: InstallerWindow.h
LibSysUpdater/: CMakeLists.txt  Makefile
LibSysUpdater/icons/: LibSysUpdater.rc  resources.qrc
LibSysUpdater/src/: UpdaterWindow.cpp  main.cpp
LibSysUpdater/src/headers/: UpdaterWindow.h
databases/: library.db  users.db
docs/: ARDUINO.md  USAGE.md
icons/: LibSys.rc  resources.qrc
libsys/: CMakeLists.txt  Makefile
libsys/databases/: library.db  users.db
libsys/flags/: resources.qrc
libsys/icons/: LibSys.rc  resources.qrc
libsys/src/: AES.cpp  AdminInterface.cpp  AdminOperations.cpp  BookSearchWindow.cpp  GeneralOperations.cpp  Graphical.cpp  LibrarySystem.cpp  LoginWindow.cpp  Mailer.cpp  MonthlyBackup.cpp  ProgramInterface.cpp  SerialReader.cpp  StudentInterface.cpp  StudentOperations.cpp  Utils.cpp  database.cpp  main.cpp  serialib.cpp
libsys/src/headers/: AES.h  AdminInterface.h  AdminOperations.h  BookSearchWindow.h  GeneralOperations.h  Graphical.h  LibrarySystem.h  LoginWindow.h  Mailer.h  MonthlyBackup.h  SerialReader.h  StudentInterface.h  StudentOperations.h  TeacherInterface.h  TeacherOperations.h  TimeClass.h  Utils.h  database.h
libsys/styles/: dark.qss  light.qss  resources.qrc
libsys/themes/: dark.qss  light.qss
libsys/translations/: resources.qrc  tr.qm  tr.ts
libsys_installer/: CMakeLists.txt  Makefile
libsys_installer/src/: InstallerWindow.cpp  main.cpp
libsys_installer/src/headers/: InstallerWindow.h
libsys_updater/: CMakeLists.txt  Makefile
src/: Input.cpp  LoginWindow.cpp  ProgramInterface.cpp  Time.cpp  database.cpp  main.cpp
src/headers/: AdminOperations.h  Graphical.h  LibrarySystem.h  LoginWindow.h  ProgramInterface.h  TimeClass.h  database.h
